[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dust3r"
version = "0.1.0"
description = "A brief description of the dust3r package"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    # List your dependencies here, e.g., "requests >= 2.25.1"
]

[tool.setuptools]
packages = ['dust3r', 'croco.models']

# [tool.setuptools.packages.find]
# where = ["."]  # list of folders that contain the packages (["."] by default)
# include = ['dust3r', 'croco.models']  # package names should match these glob patterns (["*"] by default)
# exclude = []  # exclude packages matching these glob patterns (empty by default)
# namespaces = false  # to disable scanning PEP 420 namespaces (true by default)
