[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dust3r"
version = "0.1.0"
description = "A brief description of the dust3r package"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    roma,
    torch,
    torchvision,
    scipy,
    einops,
    trimesh,
    huggingface-hub[torch]>=0.22
]

[tool.setuptools]
packages = ['dust3r', 'dust3r.cloud_opt', 'dust3r.heads', 'dust3r.utils', 'croco.models']
